tests/baselines/reference/twoGenericInterfacesWithDifferentConstraints.errors.txt
==== tests/cases/compiler/twoGenericInterfacesWithDifferentConstraints.ts (3 errors) ====
    interface A<T extends Date> {
        x: T;
    }
    
    interface A<T extends Number> { // error
              ~
!!! twoGenericInterfacesWithDifferentConstraints.ts(5,11): error TS2234: All declarations of an interface must have identical type parameters.
        y: T;
    }
    
    module M {
        interface B<T extends A<Date>> {
            x: T;
        }
    
        interface B<T extends A<any>> { // error
                  ~
!!! twoGenericInterfacesWithDifferentConstraints.ts(14,15): error TS2234: All declarations of an interface must have identical type parameters.
            y: T;
        }
    }
    
    module M2 {
        interface A<T extends Date> {
            x: T;
        }
    }
    
    module M2 {
        interface A<T extends Number> { // ok, different declaration space from other M2.A
            y: T;
        }
    }
    
    module M3 {
        export interface A<T extends Date> {
            x: T;
        }
    }
    
    module M3 {
        export interface A<T extends Number> { // error
                         ~
!!! twoGenericInterfacesWithDifferentConstraints.ts(38,22): error TS2234: All declarations of an interface must have identical type parameters.
            y: T;
        }
    }